fixed bug where google chrome submit button not aligned

--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ html, body {
 
 
 .button {
+    /* border: 2px blue solid; */
     cursor: pointer;
     width: 160px;
     height: 36px;
@@ -276,11 +277,7 @@ html, body {
 }
 
 .button_submit {
-    color: white;
-    text-transform: uppercase;
     background-color: #37158C;
-    font-size: 18px;
-    font-weight: 700;
     cursor: pointer;
 }
 
@@ -309,6 +306,40 @@ input[type=text], input[type=email], textarea {
     width: 100%;
     caret-color: black;
 }
+
+.submitTextWrapper {
+    /* position: absolute;
+    left: 0;
+    top: 0; */
+    /* height: 100%;
+    width: 100%; */
+    position: absolute;
+    width: 160px;
+    /* border: 2px white solid; */
+    display: flex;
+    justify-content: center;
+    height: 36px;
+    align-items: center;
+    /* text-align: center; */
+}
+
+.submitWrapper p{
+    color: white;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 700;
+    /* text-align: center; */
+    /* position: absolute;
+    top: 10; */
+    
+}
+
+/* input[type=submit] { 
+    border: 2px red solid;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+} */
 
 .music__container {
     position: absolute;
